# pyexplorer

./: .gitignore  docker-compose.yaml
pyalgorithm/: README.md  pyproject.toml
pyalgorithm/algorithms/: hello.py
pyalgorithm/algorithms/arrays/: array_inversion_counter.py
pyalgorithm/algorithms/graph/: graph.py  node.py
pyalgorithm/tests/: conversation.py  test_array_inversion_counter.py  test_graph.py
pyapp/: pyproject.toml
pyapp/pyexplorerapp/: regexapp.py  regexcli.py
pyapp/pyexplorerweb/: Dockerfile  app.py
pyapp/pyexplorerweb/templates/: index.html
pyshared/: pyproject.toml
pyshared/regexutils/: regexutilities.py
pyshared/tests/: test_regex.py
