[tool.poetry]
name = "pyalgorithm"
version = "0.1.0"
description = ""
authors = ["zhiyi zhang <zhiyi.zhang@rocketmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pynum = "^0.0.1"
pendulum = "^2.1.2"
regex = "^2023.10.3"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
ruff = "^0.1.3"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
