[tool.poetry]
name = "pyapp"
version = "0.1.0"
description = "Py Explorer Application"
authors = ["zhiyi zhang <zhiyi.zhang@rocketmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pynum = "^0.0.1"
regex = "^2023.10.3"
pendulum = "^2.1.2"
pyshared = { path = "../pyshared" }
typer = "^0.9.0"
flask = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
